Markers more or less implemented. Still couple of issues. 1) problems arise when adding new org unit and using combination of polygons and marker 2) marker icon still visible even when editing 3) map view is temporary not to screen edge to fit buttons for marker edit 4) marker edit controls always visible

--- a/src/components/map-view/map-view.component.less
+++ b/src/components/map-view/map-view.component.less
@@ -3,10 +3,22 @@ body {
     margin: 0;
 }
 
+#add-marker {
+    position: absolute;
+    top: 250px;
+    right: 0px;
+}
+
+#remove-marker {
+    position: absolute;
+    top: 290px;
+    right: 0px;
+}
+
 #map {
     position: absolute;
     top: 0px;
     left: 0px;
     bottom: 0px;
-    right: 0px;
+    right: 50px;
 }
